Add CoinList view, change nav layout and footer color

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -4,7 +4,7 @@
 
 // 2. Set your own initial variables
 // Add pink
-$grey: #666666;
+$footer-background-color: #ffffff;
 
 // 3. Set the derived variables
 // Use the new pink as the primary color
