--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -8,6 +8,16 @@ $border-color: #003459;
 $footer-background-color: #ffffff;
 
 $background: #00171F;
+$body-background-color: $background;
+
+// Button
+$button-color: $white;
+$button-text-color: $white;
+$button-background-color: $background;
+$button-hover-color: $white;
+$button-active-color: $white;
+$button-focus-color: $white;
+$button-focus-border-color: $white;
 
 
 // Navbar
